fixed overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ body{
 .container{
     max-width: 1180px;
     margin: 0 auto;
+    overflow-x: hidden;
     
 }
 header{
